<resources>
    <string name="app_name">FilmSpot</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_continue_buttom">Continue buttom</string>
    <string name="filmspot_subtitle">Lights, camera, rate!</string>
    <string name="bt_signin">Sign in</string>
    <string name="bt_signup">I´m new here</string>
    <string name="bt_sign_in">Sign in</string>
    <string name="bt_lets_rate">Sign up</string>
    <string name="textinput_email">Email</string>
    <string name="textinput_password">Password</string>
    <string name="tv_signup">Sign Up</string>
    <string name="tv_welcome_to_filmspot">Welcome to Filmspot</string>
    <string name="tv_already_have_an_account">Already have an account?</string>
    <string name="bt_recovery_password">Recovery password?</string>
    <string name="bt_sign_up">Sign up</string>
    <string name="tv_sign_in">Sign In</string>
    <string name="tv_welcome_back_you_ve_been_miseed">Welcome back you\'ve been miseed!</string>
    <string name="tv_dont_have_an_account">Don\'t have an account?</string>
    <string name="favorite_movie">Favorite movie</string>
    <string name="reviews">Reviews</string>
    <string name="more_activity">More activity</string>
    <string name="watchlist">Watchlist</string>
    <string name="details">Details</string>
    <string name="lets_explore">Let´s explore</string>
    <string name="explore">Explore</string>
    <string name="find_films">Find Films</string>
    <string name="descriptive_favoriteMovie">favorite movie image</string>
    <string name="description_claqueta">Icono de claqueta</string>
    <string name="description_home">Icono de Casa</string>
    <string name="description_heart">Icono de Corazón</string>
</resources>